$Id$

v0.83.13	13-Feb-2006

	mbsebbs:
		Writes LINES and COLUMNS environment into data.msg so that the
		joe editor can use that.

	mbcico:
		Added real error message for failed outgoing IP connections.


v0.83.12	06-Feb-2006 - 13-Feb-2006

	mbselib.a:
		On socket send error 2, abort the client program.

	mbsebbs:
		Added screen rows detection using ANSI sequences needed for
		some terminal programs like minicom.

	mbtask:
		On shutdown also send PART and QUIT messages to all our links
		for our own users if they are still online so that the network
		will keep the correct state.
		Removed all thread programming so that mbtask is now a single
		process again. This should fix the crash problem during chat.


v0.83.11	28-Jan-2006 - 06-Feb-2006

	mbtask:
		When the IBC server detects a IP change of a remote server it
		will completly restart the connection with that remote.
		Made several functions multithread aware.
		Finished tasks now report using a signal call.
		The main scheduler doesn't run in a thread anymore.
		Removed some debug logging in chat.

	mbcico:
		Assume EXTCMD is set when GZ or BZ2 is active.

	mbstat:
		Added semafore names to help display.

	mbmon:
		In chat beeps are heard for system messages.
		Removed most debug logging in chat.
		Added width marker for chat input and fixed linelength.

	mbsebbs:
		Removed most debug logging in chat.
		Added width marker for chat input and fixed linelength.


v0.83.10	25-Jan-2006 - 28-Jan-2006

	upgrade:
		In menus 7.n.3.14 check if the NR flag is off, unless you need
		it (which I doubt).

	mbcico:
		Implemented binkp NR option. We don't really make use of it,
		but if the remote mailer whishes to send files in NR mode it
		will work.

	mbsetup:
		Added NR switch to the nodes session setup.


v0.83.9		23-Jan-2006 - 25-Jan-2006

	mbstat:
		Don't write in errorlog after normal termination.

	mbtask:
		In IBC refuse to add a user when there is no known server for
		that user.